# qt-chess

./: CMakeLists.txt  README.md  ai.cpp  ai.h  board.cpp  board.h  chesswindow.cpp  chesswindow.h  chesswindow.ui  config.h  evaluate.cpp  evaluate.h  game.cpp  game.h  main.cpp  move.h  movegen.cpp  movegen.h  piece.cpp  piece.h  pieceinvalid.cpp  pieceinvalid.h  piecepawn.cpp  piecepawn.h  principlevariation.cpp  principlevariation.h  test.cpp  test.h
ai/: ai.cpp  ai.h  board.cpp  board.h  evaluate.cpp  evaluate.h  move.cpp  movegen.cpp  movegen.h
piece/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
